--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,14 @@ typings/
 
 # next.js build output
 .next
+
+#mac
+.DS_STORE
+
+.idea
+
+test/test_files
+test/processed_files
+
+ffmpeg-4.0.dmg
+ffprobe-4.0.dmg
