--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,10 @@ typings/
 .idea
 
 test/test_files
+test/compressed_files
+test/reformatted_files
 test/renamed_path
+test/sliced_files
 
 ffmpeg-4.0.dmg
 ffprobe-4.0.dmg
