ffprobe analysis working

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ffmpeg-installer/ffmpeg": "^1.0.15",
     "@ffprobe-installer/ffprobe": "^1.0.9",
     "config": "^1.30.0",
+    "ffprobe": "^1.1.0",
+    "ffprobe-static": "^2.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "winston": "3.0.0-rc6",
     "yargs": "^11.0.0"
